--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "file:///home/rhm/projects/3rdparty/webpack/webpack-3.8.1.tgz",
+    "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
 }
-
