--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "Rene Hangstrup Møller <rhmoller@gmail.com> (http://giddyplanet.com/)",
   "license": "MIT",
   "devDependencies": {
-    "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   }
 }
