--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "Rene Hangstrup Møller <rhmoller@gmail.com> (http://giddyplanet.com/)",
   "license": "MIT",
   "devDependencies": {
-    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.0.0"
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   }
 }
